another refined attempt to fix the overflow scroll

--- a/app/assets/stylesheets/layout/admin/layout.scss
+++ b/app/assets/stylesheets/layout/admin/layout.scss
@@ -1,6 +1,6 @@
 body.admin {
   * {
-    overflow: hidden;
+    overflow: auto;
   }
 
   .column-set {
